feat: #16 introduce unmodifiable collectors where possible